[project]
name = "marrow_blog"
version = "0.1.0"
description = "An example Flask app running in Docker."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.15.2",
  "celery==5.5.2",
  "flask==3.1.0",
  "flask-db==0.4.1",
  "flask-debugtoolbar==0.16.0",
  "flask-secrets==0.1.0",
  "flask-sqlalchemy==3.1.1",
  "flask-static-digest==0.4.1",
  "gunicorn==23.0.0",
  "jinja2==3.1.6",
  "pytest==8.3.5",
  "pytest-cov==6.1.1",
  "flask-login==0.6.3",
  "pyotp==2.9.0",
  "flask-classful==0.16",
  "flask-marshmallow==1.3.0",
  "marshmallow==4.0.0",
  "marshmallow-sqlalchemy==1.4.2",
  "Flask-FlatPages==0.8.2",
  "markdown==3.7",
  "pygments==2.18.0",
  "ruff==0.11.8",
  "setuptools==80.3.1",
  "sqlalchemy==2.0.40",
  "sqlalchemy-utils==0.41.2",
  "werkzeug==3.1.3",
  "flask-wtf==1.2.1",
  "wtforms-components==0.10.5",
  "wtforms-alchemy==0.18.0",
  "wtforms==3.0.1"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "SIM"]
